2016-08-04  Patrick Palka  <ppalka@gcc.gnu.org>

	PR c++/72759
	* pt.c (tsubst_qualified_id): Return error_mark_node if
	template_args is error_mark_node.

2016-08-04  Jason Merrill  <jason@redhat.com>

	PR c++/72415
	* pt.c (tsubst_pack_expansion): Pull a single pack expansion out
	of the TREE_VEC.

	* cp-tree.h (TYPE_UNNAMED_P): Rename from TYPE_ANONYMOUS_P.
	(TYPE_WAS_UNNAMED): Rename from TYPE_WAS_ANONYMOUS.
	* class.c, decl.c, decl2.c, error.c, lambda.c, mangle.c,
	name-lookup.c, parser.c, pt.c, semantics.c, tree.c: Adjust.

	PR c++/72796
	* typeck.c (finish_class_member_access_expr): Avoid stripping
	SCOPE_REF to dependent base.

2016-08-04  Thomas Schwinge  <thomas@codesourcery.com>

	* parser.c (cp_ensure_no_oacc_routine): Improve diagnostics.
	(cp_parser_late_parsing_cilk_simd_fn_info): Fix diagnostics.
	(cp_parser_late_parsing_oacc_routine, cp_finalize_oacc_routine):
	Simplify code, and improve diagnostics.
	(cp_parser_oacc_routine): Likewise.  Move pragma context
	checking...
	(cp_parser_pragma): ... here.

	* parser.h (struct cp_omp_declare_simd_data): New.
	(struct cp_parser): Use it for oacc_routine member.
	* parser.c (cp_ensure_no_oacc_routine, cp_parser_oacc_routine)
	(cp_parser_late_parsing_oacc_routine, cp_finalize_oacc_routine):
	Use it.  Simplify code.
	(cp_parser_new): Initialize all members pointing to special
	parsing data structures.
	(cp_parser_cilk_simd_fn_vector_attrs): Initialize
	parser->cilk_simd_fn_info->clauses.
	(cp_parser_omp_declare_simd): Initialize
	parser->omp_declare_simd->clauses.
	(cp_parser_late_parsing_omp_declare_simd): Simplify code.

2016-08-04  Marek Polacek  <polacek@redhat.com>

	PR c++/70229
	* constexpr.c (check_constexpr_ctor_body_1): Allow typedef
	declarations.

2016-08-01  Jason Merrill  <jason@redhat.com>

	* mangle.c (mangle_decl): Warn about mangled name change even if
	DECL_REALLY_EXTERN.

	* mangle.c (get_abi_tags): New.
	(find_substitution, write_unqualified_name, write_abi_tags)