@@ -1,3 +1,9 @@
+2016-08-04  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/72800
+	* lambda.c (add_capture): Check lambda_capture_field_type return
+	value for error_mark_node.
+
 2016-08-04  Patrick Palka  <ppalka@gcc.gnu.org>
 
 	PR c++/72759
